role populated with the real stuff

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,7 @@
 ---
-# defaults file for ansible-role-dhcp_server
+dhcp_interfaces: eth0
+
+dhcp_subnets: []
+dhcp_hosts: []
+dhcp_classes: []
+dhcp_shared_networks: []
