--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -19,17 +19,17 @@
 # Generate configuration
 - name: Generate dhcpd.conf
   template: src=dhcpd.conf.j2 dest={{ dhcp_server_config }} owner=root group=root mode=0644 validate='/usr/sbin/dhcpd -t -cf %s'
-  notify:
-    - restart dhcpd
+#  notify:
+#    - restart dhcpd
 
 # Generate service configuration
 - name: Generate DHCP service conf
   template: src=service.conf.{{ ansible_os_family }}.j2 dest={{ dhcp_service_config }} owner=root group=root
   when: ansible_os_family == 'RedHat' or ansible_os_family == 'Debian'
-  notify:
-    - restart dhcpd
+#  notify:
+#    - restart dhcpd
 
 # Enable DHCP server
 - name: Start the dhcp services DHCP
-  service: name={{ dhcp_service }} state=started enabled=yes
+  service: name={{ dhcp_service }} enabled=yes
   
