--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -16,6 +16,9 @@
   pacman: name={{ dhcp_server_package }} state=installed update_cache=yes
   when: ansible_os_family == 'Archlinux'
 
+- name: create a dummy nodes.conf file
+  file: state=touch path=/etc/dhcp/dhcpd.d/nodes.conf owner=root mode=0644
+
 # Generate configuration
 - name: Generate dhcpd.conf
   template: src=dhcpd.conf.j2 dest={{ dhcp_server_config }} owner=root group=root mode=0644 validate='/usr/sbin/dhcpd -t -cf %s'
